--- a/index.html
+++ b/index.html
@@ -1,47 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>The Basic Language of the Web: HTML</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <title>The Basic Language of the Web: HTML</title>
+</head>
+
+<body>
+  <header>
+    <h1>📘 The Code Magazine</h1>
+    <nav>
+      <a href="blog.html">Blog</a>
+      <a href="#">Challenges</a>
+      <a href="#">Flexbox</a>
+      <a href="#">CSS Grid</a>
+    </nav>
+  </header>
+  <article>
     <header>
-      <h1>📘 The Code Magazine</h1>
-      <nav>
-        <a href="blog.html">Blog</a>
-        <a href="#">Challenges</a>
-        <a href="#">Flexbox</a>
-        <a href="#">CSS Grid</a>
-      </nav>
-    </header>
-    <article>
-      <header>
-        <h2>The Basic Language of the Web: HTML</h2>
+      <h2>The Basic Language of the Web: HTML</h2>
 
-        <img
-          src="img/laura-jones.jpg"
-          alt="img/Picture of Laura Jones"
-          width=""
-          width="64"
-          height="64"
-        />
+      <img src="img/laura-jones.jpg" alt="img/Picture of Laura Jones" width="" width="64" height="64" />
 
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-
-        <img
-          src="img/post-img.jpg"
-          alt="HTML code on a screen"
-          width="500"
-          height="200"
-        />
-      </header>
-      <p>
-        All modern websites and web applications are built using three
-        <em>fundamental</em>
-        technologies: HTML, CSS and JavaScript. These are the languages of the
-        web.
-      </p>
+      <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
       <p>
         In this post, let's focus on HTML. We will learn what HTML is all about,
@@ -88,29 +69,30 @@
       </ul>
 
       <p>Hopefully you learned something new here. See you next time!</p>
-    </article>
+  </article>
 
-    <aside>
-      <h4>Related posts</h4>
-      <ul>
-        <li>
-          <img src="img/related-1.jpg" width="75" height="75" />
-          <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
-        </li>
-        <li>
-          <img src="img/related-2.jpg" width="75" height="75" />
-          <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
-        </li>
-        <li>
-          <img src="img/related-3.jpg" width="75" height="75" />
-          <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
-        </li>
-      </ul>
-    </aside>
+  <aside>
+    <h4>Related posts</h4>
+    <ul>
+      <li>
+        <img src="img/related-1.jpg" width="75" height="75" />
+        <a href="#">How to Learn Web Development</a>
+        <p>By Jonas Schmedtmann</p>
+      </li>
+      <li>
+        <img src="img/related-2.jpg" width="75" height="75" />
+        <a href="#">The Unknown Powers of CSS</a>
+        <p>By Jim Dillon</p>
+      </li>
+      <li>
+        <img src="img/related-3.jpg" width="75" height="75" />
+        <a href="#">Why JavaScript is Awesome</a>
+        <p>By Matilda</p>
+      </li>
+    </ul>
+  </aside>
 
-    <footer>Copyright &copy; 2027 by The Code Magazine</footer>
-  </body>
+  <footer>Copyright &copy; 2027 by The Code Magazine</footer>
+</body>
+
 </html>
