--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>The Basic Language of the Web: HTML</title>
+    <title>Andrei's test</title>
   </head>
 
   <body>
@@ -89,7 +89,7 @@
 
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
-
+  
     <aside>
       <h4>Related posts</h4>
       <ul>
